Disparo desde la vista

--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -1,7 +1,7 @@
 <h1>Batalla Naval</h1>
 <form method="post" action="/disparo">
-Letra: <input type="text" name="Letra" />
+Letra: <input type="text" name="letra" />
  <input type="submit" value="Play"/>
 </form>
 
-<p>Puntaje: <%= @resultado %></p>
+<p>Resultado: <%= @resultado %></p>
