se agrego numero

--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -1,7 +1,11 @@
 <h1>Batalla Naval</h1>
 <form method="post" action="/disparo">
 Letra: <input type="text" name="letra" />
+<p>
+Numero: <input type="text" name="numero" />
  <input type="submit" value="Play"/>
+</p>
 </form>
+
 
 <p>Resultado: <%= @resultado %></p>
