Control Vida y Fin de Juego

--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -5,42 +5,11 @@ Letra: <input type="text" name="letra" />
 Numero: <input type="text" name="numero" />
 </p>
 <p>
- <input width="100" type="submit" value="Play"/>
+ <input width="300" type="submit" value="Disparo"/>
 </p>
 </form>
 
-<table width="405" border="1" name="tablero">
- <caption>Tablero de Disparos</caption>
-<tr>
-<th id="A">A</th>
- <th id="B">B</th>
-<th id="C">C</th>
- <th id="D">D</th>
-</tr>
-     <tr>
-       <td bgcolor=#ffffff> </td>
-       <td bgcolor=#ffffff> </td>
-       <td bgcolor=#ffffff> </td>
-       <td bgcolor=#ffffff> </td>
-     </tr>
-     <tr>
-       <td bgcolor=#ffffff> </td>
-       <td bgcolor=#4db8ff> </td>
-       <td bgcolor=#ffffff> </td>
-       <td bgcolor=#ffffff> </td>
-     </tr>
-     <tr>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-     </tr>
-     <tr>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-       <td bgcolor=#ffffff></td>
-     </tr>
- </table> 
 
 <p>Resultado: <%= @resultado %></p>
+
+<p>Cantidad de Vidas: <%= @vidas %></p>
