--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -13,3 +13,5 @@ Numero: <input type="text" name="numero" />
 <p>Resultado: <%= @resultado %></p>
 
 <p>Cantidad de Vidas: <%= @vidas %></p>
+
+<p>Barcos: <%= @barcos %></p>
