--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -15,3 +15,43 @@ Numero: <input type="text" name="numero" />
 <p>Cantidad de Vidas: <%= @vidas %></p>
 
 <p>Barcos: <%= @barcos %></p>
+
+<table border="1" name="tablero">
+ <caption>Tablero de Disparos</caption>
+<tr>
+<th id="1"></th>
+<th id="A">A</th>
+ <th id="B">B</th>
+<th id="C">C</th>
+ <th id="D">D</th>
+</tr>
+     <tr> 
+       <td width = 100 height = 50  td>1
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizDisparos 0,0%>  </td>
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizDisparos 1,0%> </td>
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizDisparos 2,0%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 3,0%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>2
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 0,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 1,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 2,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 3,1%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>3
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 0,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 1,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 2,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 3,2%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>4
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 0,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 1,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 2,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 3,3%> </td>
+     </tr>
+ </table> 
+
