--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -1,22 +1,32 @@
-<h1>Batalla Naval</h1>
-<form method="post" action="/disparo">
-Letra: <input type="text" name="letra" />
-<p>
-Numero: <input type="text" name="numero" />
-</p>
-<p>
- <input width="300" type="submit" value="Disparo"/>
-</p>
-</form>
-
-
-<p>Resultado: <%= @resultado %></p>
-
-<p>Cantidad de Vidas: <%= @vidas %></p>
-
-<p>Barcos: <%= @barcos %></p>
-
-<table border="1" name="tablero">
+<table width="100%" height="250px" cellspacing="1px" border="1px">
+   <tr height="40px">
+      <td colspan="2px">
+         <table title="Banner" border="0">
+            <tr align="center">
+		
+               <td> <h1 >Batalla Naval</h1></td>
+		<td> <img src="team-beer.png"></td>
+		 
+            </tr>
+         </table>
+      </td>
+   </tr>
+   <tr height="200px">
+      <td>
+         <form method="post" action="/disparo">
+		Letra: <input type="text" name="letra" />
+		<p>
+		Numero: <input type="number" name="numero" min="1" max="4">
+		</p>
+		<p>
+ 		<input width="300" type="submit" value="Disparo"/>
+		</p>
+	</form>
+      </td>
+      <td>
+         <table title="Contenido" border="0" width="400px">
+            <tr>
+               <table border="1" name="tablero" ralign= "center">
  <caption>Tablero de Disparos</caption>
 <tr>
 <th id="1"></th>
@@ -54,4 +64,13 @@ Numero: <input type="text" name="numero" />
        <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizDisparos 3,3%> </td>
      </tr>
  </table> 
+<p>Resultado: <%= @resultado %></p>
+<p>Cantidad de Vidas: <%= @vidas %></p>
+<p>Barcos: <%= @barcos %></p>
+
+            </tr>
+         </table>
+     </td>
+  </tr>
+</table>
 
