--- a/views/Batalla.erb
+++ b/views/Batalla.erb
@@ -3,10 +3,8 @@
       <td colspan="2px">
          <table title="Banner" border="0">
             <tr align="center">
-		
                <td> <h1 >Batalla Naval</h1></td>
-		<td> <img src="team-beer.png"></td>
-		 
+	
             </tr>
          </table>
       </td>
@@ -16,12 +14,14 @@
          <form method="post" action="/disparo">
 		Letra: <input type="text" name="letra" />
 		<p>
-		Numero: <input type="number" name="numero" min="1" max="4">
+		Numero: <input type="text" name="numero" min="1" max="4"/>
 		</p>
 		<p>
  		<input width="300" type="submit" value="Disparo"/>
 		</p>
+	        	
 	</form>
+	 <img src="team-beer.png">
       </td>
       <td>
          <table title="Contenido" border="0" width="400px">
