--- a/views/Finjuego.erb
+++ b/views/Finjuego.erb
@@ -1,3 +1,67 @@
-<h1>Batalla Naval</h1>
-<h1>Fin Juego</h1>
+<table width="100%" height="250px" cellspacing="1px" border="1px">
+   <tr height="40px">
+      <td colspan="2px">
+         <table title="Banner" border="0">
+            <tr align="center">
+               <td> <h1 >Batalla Naval</h1></td>
+	
+            </tr>
+         </table>
+      </td>
+   </tr>
+   <tr height="200px">
+      <td>
+         <h1>FIN DEL JUEGO.. PERDISTE</h1>
+	 <img src="team-beer.png">
+      </td>
+      <td>
+         <table title="Contenido" border="0" width="400px">
+            <tr>
+               <table border="1" name="tablero" ralign= "center">
+ <caption>Tablero de Barcos</caption>
+<tr>
+<th id="1"></th>
+<th id="A">A</th>
+ <th id="B">B</th>
+<th id="C">C</th>
+ <th id="D">D</th>
+</tr>
+     <tr> 
+       <td width = 100 height = 50  td>1
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizBarcos 0,0%>  </td>
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizBarcos 1,0%> </td>
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizBarcos 2,0%> </td>
+       <td width = 100 height = 50  bgcolor=<%= @@tablero.consultarMatrizBarcos 3,0%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>2
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 0,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 1,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 2,1%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 3,1%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>3
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 0,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 1,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 2,2%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 3,2%> </td>
+     </tr>
+     <tr> 
+	<td width = 100 height = 50  td>4
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 0,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 1,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 2,3%> </td>
+       <td width = 100 height = 50 bgcolor=<%= @@tablero.consultarMatrizBarcos 3,3%> </td>
+     </tr>
+ </table> 
+<p>Resultado: <%= @resultado %></p>
+<p>Cantidad de Vidas: <%= @vidas %></p>
+<p>Barcos: <%= @barcos %></p>
+
+            </tr>
+         </table>
+     </td>
+  </tr>
+</table>
 
